[gd_scene load_steps=5 format=3 uid="uid://b5ym1albq30vf"]

[ext_resource type="Script" path="res://Scripts/PauseMenu.gd" id="1_gbqgn"]
[ext_resource type="Theme" uid="uid://dvnwmjqtsjco" path="res://Themes/UpgradeButtonTheme.tres" id="2_f51ow"]
[ext_resource type="PackedScene" uid="uid://nxexr13pfsqy" path="res://Scenes/UI/how_to_play.tscn" id="3_7xpxp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jpchl"]
bg_color = Color(0.596078, 0.0470588, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_gbqgn")

[node name="PauseMenu" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 200

[node name="Panel" type="Panel" parent="PauseMenu/MarginContainer"]
custom_minimum_size = Vector2(500, 225)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_jpchl")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="Label" type="Label" parent="PauseMenu/MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("2_f51ow")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "GAME PAUSED"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/MarginContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 40

[node name="Resume" type="Button" parent="PauseMenu/MarginContainer/Panel/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../../MarginContainer2/HowtoPlay")
focus_neighbor_right = NodePath("../../MarginContainer2/HowtoPlay")
theme = ExtResource("2_f51ow")
text = "

"

[node name="ResumeLabel" type="Label" parent="PauseMenu/MarginContainer/Panel/VBoxContainer/HBoxContainer/MarginContainer/Resume"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -9.0
offset_right = 33.5
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_f51ow")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Resume"

[node name="MarginContainer2" type="MarginContainer" parent="PauseMenu/MarginContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 40

[node name="HowtoPlay" type="Button" parent="PauseMenu/MarginContainer/Panel/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
focus_neighbor_left = NodePath("../../MarginContainer/Resume")
focus_neighbor_right = NodePath("../../MarginContainer/Resume")
theme = ExtResource("2_f51ow")
text = "
"

[node name="HowToPlayLabel" type="Label" parent="PauseMenu/MarginContainer/Panel/VBoxContainer/HBoxContainer/MarginContainer2/HowtoPlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -9.0
offset_right = 33.5
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_f51ow")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "How To Play
"

[node name="How to Play" parent="." instance=ExtResource("3_7xpxp")]
unique_name_in_owner = true

[connection signal="pressed" from="PauseMenu/MarginContainer/Panel/VBoxContainer/HBoxContainer/MarginContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/Panel/VBoxContainer/HBoxContainer/MarginContainer/Resume" to="PauseMenu" method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/Panel/VBoxContainer/HBoxContainer/MarginContainer2/HowtoPlay" to="." method="_on_howto_play_pressed"]
[connection signal="closed" from="How to Play" to="." method="_on_how_to_play_closed"]

[editable path="How to Play"]
